--- a/signup.html
+++ b/signup.html
@@ -52,7 +52,7 @@
                       <ul>
                           <li><a href="index.html">home</a></li>
                           <li><a href="shop.html">Shop</a></li>
-                          <li><a href="comment.html">subsrcibe</a></li>
+                          <li><a href="comment.html">subscribe</a></li>
                           
                       </ul>
                    </div>
